# StormFN-src

./: README.md  app.js  example.draw  important.txt  index.js  main.py  news.json  package-lock.json  package.json  pyproject.toml  requirements.txt
config_template/profiles/: profile_athena.json  profile_common_core.json  profile_creative.json
files/cache/: dum.json  ip.json
files/cloudstorage/: DefaultEngine.ini  DefaultGame.ini  DefaultRuntimeOptions.ini  b
files/config/profiles/accountid/: settings.json
files/config/s/: settings.json
files/workers/: api.py  fortnite.py  matchmaking.py  mcp.py
hotfixes/: DefaultEngine.ini  DefaultGame.ini  DefaultRuntimeOptions.ini
managers/: api.js  fortnite-game.js  mcp.js  panel.js  shop.js
managers/panel/: index.html
profileTemplate/: athena.json  common_core.json  common_public.json  creative.json
public/: index.html  style.css
public/html/: index.html
